<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:layout_margin="10dp"
    >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp"
    android:elevation="5dp"
    android:padding="5dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/cardView"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#66DCD6D6"
        >

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="6dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            >
            
            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="7"
                android:layout_weight="1"
                android:padding="5dp"
                android:textSize="15sp"
                android:text="@string/main_content"
                />

            <ImageView
                android:id="@+id/imgNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:padding="5dp"
                android:src="@drawable/ic_launcher_background"
                />
            
        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_news"
            android:textSize="15sp"
            android:textColor="#221E1E"
            android:id="@+id/txtAuthor"
            android:textStyle="italic"
            android:padding="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/txtPublishedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time"
            android:textSize="15sp"
            android:padding="4dp"
            android:textColor="#ED1B1717"
            android:ellipsize="end"
            android:textStyle="bold"
            android:maxLines="1"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>